fixed uneven widths on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ strong {
 article {
   border-bottom: 1px solid #734B5E;
   border-top: 1px solid #734B5E;
+  width: 100vw;
   max-width: 45rem;
   padding: 1rem 0 1rem;
   min-height: 80vh;
